--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ setproctitle==1.3.2
 streamlit==1.25.0
 submitit==1.4.5
 sympy==1.11.1
-torch==2.0.0
+#torch==2.0.0
 tqdm==4.64.1
 treelib==1.6.4
 uci-dataset==0.0.7
